--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.1",
     "axios": "^1.7.9",
+    "date-fns": "^4.1.0",
     "install": "^0.13.0",
     "lucide-react": "^0.344.0",
     "npm": "^11.0.0",
@@ -22,7 +23,8 @@
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
     "react-snaplist-carousel": "^4.6.0",
-    "react-window": "^1.8.11"
+    "react-window": "^1.8.11",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
