--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
     "react-snaplist-carousel": "^4.6.0",
+    "react-spring": "^9.7.5",
     "react-window": "^1.8.11",
     "socket.io-client": "^4.8.1"
   },
